Genral cleanup and started Readme.md

--- a/settings.ini
+++ b/settings.ini
@@ -1,22 +1,22 @@
-; This is a comment
+; Ini File Notes:
+; This is a comment (line starts with ";")
 ; Section Names in [square brackets] are descriptions for each MCU project
-;   MCU projects are selected fron the ListBox on the bottom left of MCU_Serial_Comm
+;   MCU projects are auto selected based on "commID" response from Arduino program
 ; Each row item must start with "row_" followed by a number
 ;   Once MCU_Serial_Comm does not find the next consecutive row number it stops looking
+;   row_0 and row_1 data shown below are required, you need to customize the
+;     baud rate and commID values for each MCU program
 ;   Data on the right side of the "=" in each row is:
 ;     Type
 ;       - "inf" - information
 ;       - "in"  - data coming in from the MCU
 ;       - "out" - data going out to the MCU
-;     Symbol - One unique character (A-Z, a-z, 0-9) for the command or return value
+;     Symbol - One unique character (A-Z or a-z) for the command or return value
 ;     Description - shows in Name column and button (if applicable) of Data Grid
 ;     Value - MCU long integer of number to be sent to or received from MCU
 ;             A value of -1 means no value is sent to the MCU for this row
 ;     Action - A series of "out" Symbols sent to the MCU (with their values) when the button is pressed
 ;     Button - true or false depending on whether an Action button is needed
-;
-;   row_0 and row_1 data shown below are required, you need to customize the
-;     baud rate and commID values for each MCU program
 ;
 [TTMC2209_Test-04]
 row_0 = inf, B, baudRate, 115200, , false
@@ -49,7 +49,7 @@ row_4 = out, E, offShort, 89, , false
 row_5 = out, S, blinkShort, -1, CDES, true
 row_6 = out, F, nLong, 6, , false
 row_7 = out, G, onLong, 100, , false
-row_8 = out, H, offLong, 899, , false
+row_8 = out, H, offLong, 880, , false
 row_9 = out, L, blinkLong, -1, FGHL, true
 row_10 = in, m, millisFromMCU, 0, , false
 row_11 = in, u, microsFromMCU, 0, , false
