Added option to host TrackBar (Slider) control in button column of DGV and included sample Arduino program.

--- a/settings.ini
+++ b/settings.ini
@@ -16,41 +16,58 @@
 ;     Value - MCU long integer of number to be sent to or received from MCU
 ;             A value of -1 means no value is sent to the MCU for this row
 ;     Action - A series of "out" Symbols sent to the MCU (with their values) when the button is pressed
-;     Button - true or false depending on whether an Action button is needed
+;     Button - true (1) or false (0) depending on whether an Action button is needed
 ;
 [TTMC2209_Test-04]
-row_0 = inf, B, baudRate, 115200, , false
-row_1 = inf, Z, commID, 1001, , false
-row_2 = out, M, motorSelect, 0, , false
-row_3 = out, F, jogSpeedFast, 320, , false
-row_4 = out, J, jogSpeedSlow, 10, , false
-row_5 = out, Q, jogPositiveFast, -1, MFQ, true
-row_6 = out, P, jogPositiveSlow, -1, MJP, true
-row_7 = out, N, jogNegativeSlow, -1, MJN, true
-row_8 = out, O, jogNegativeFast, -1, MFO, true
-row_9 = out, X, stopMotor, -1, X, true
-row_10 = out, H, setHome, -1, MH, true
-row_11 = out, S, maxSpeed, 2500, , false
-row_12 = out, A, maxAccel, 5000, , false
-row_13 = out, T, targetPos, 3200, , false
-row_14 = out, R, runToTarget, -1, MSATR, true
-row_15 = out, D, runToZero, -1, MSAD, true
-row_16 = out, G, runToEndStop, -1, G, true
-row_17 = out, C, runMotorTest, -1, C, true
-row_18 = in, a, posMotor0, 0, , false
-row_19 = in, b, posMotor1, 0, , false
-row_20 = in, c, posMotor2, 0, , false
-[Blink-01]
-row_0 = inf, B, baudRate, 115200, , false
-row_1 = inf, Z, commID, 1002, , false
-row_2 = out, C, nShort, 11, , false
-row_3 = out, D, onShort, 10, , false
-row_4 = out, E, offShort, 89, , false
-row_5 = out, S, blinkShort, -1, CDES, true
-row_6 = out, F, nLong, 6, , false
-row_7 = out, G, onLong, 100, , false
-row_8 = out, H, offLong, 880, , false
-row_9 = out, L, blinkLong, -1, FGHL, true
-row_10 = in, m, millisFromMCU, 0, , false
-row_11 = in, u, microsFromMCU, 0, , false
+row_0 = inf, B, baudRate, 115200, , 0
+row_1 = inf, Z, commID, 1001, , 0
+row_2 = out, M, motorSelect, 0, , 0
+row_3 = out, F, jogSpeedFast, 320, , 0
+row_4 = out, J, jogSpeedSlow, 10, , 0
+row_5 = out, Q, jogPositiveFast, -1, MFQ, 1
+row_6 = out, P, jogPositiveSlow, -1, MJP, 1
+row_7 = out, N, jogNegativeSlow, -1, MJN, 1
+row_8 = out, O, jogNegativeFast, -1, MFO, 1
+row_9 = out, X, stopMotor, -1, X, 1
+row_10 = out, H, setHome, -1, MH, 1
+row_11 = out, S, maxSpeed, 2500, , 0
+row_12 = out, A, maxAccel, 5000, , 0
+row_13 = out, T, targetPos, 3200, , 0
+row_14 = out, R, runToTarget, -1, MSATR, 1
+row_15 = out, D, runToZero, -1, MSAD, 1
+row_16 = out, G, runToEndStop, -1, G, 1
+row_17 = out, C, runMotorTest, -1, C, 1
+row_18 = in, a, posMotor0, 0, , 0
+row_19 = in, b, posMotor1, 0, , 0
+row_20 = in, c, posMotor2, 0, , 0
+[BlinkWinControl]
+row_0 = inf, B, baudRate, 115200, , 0
+row_1 = inf, Z, commID, 1002, , 0
+row_2 = out, C, nShort, 11, , 0
+row_3 = out, D, onShort, 10, , 0
+row_4 = out, E, offShort, 89, , 0
+row_5 = out, S, blinkShort, -1, CDES, 1
+row_6 = out, F, nLong, 6, , 0
+row_7 = out, G, onLong, 100, , 0
+row_8 = out, H, offLong, 880, , 0
+row_9 = out, L, blinkLong, -1, FGHL, 1
+row_10 = in, m, millisFromMCU, 0, , 0
+row_11 = in, u, microsFromMCU, 0, , 0
+[BlinkRGBWinControl]
+row_0 = inf, B, baudRate, 115200, , 0
+row_1 = inf, Z, commID, 1003, , 0
+row_2 = out, C, nShort, 11, , 0
+row_3 = out, D, onShort, 10, , 0
+row_4 = out, E, offShort, 89, , 0
+row_5 = out, S, blinkShort, -1, CDES, 1
+row_6 = out, F, nLong, 6, , 0
+row_7 = out, G, onLong, 100, , 0
+row_8 = out, H, offLong, 880, , 0
+row_9 = out, L, blinkLong, -1, FGHL, 1
+row_10 = outSlider, T, redValue, 0, T, (0<255)
+row_11 = outSlider, U, greenValue, 0, U, (0<255)
+row_12 = outSlider, V, blueValue, 0, V, (0<255)
+row_13 = in, m, millisFromMCU, 0, , 0
+row_14 = in, u, microsFromMCU, 0, , 0
+row_15 = in, p, photoRes, 0, , 0
 ;
