Added code to serPort1_DataReceived() to keep checking if serPort1 buffer is empty before moving on.  This was not an issue with ESP32 - I imagine because of concurrent tasks - but was with Teensy

--- a/settings.ini
+++ b/settings.ini
@@ -26,9 +26,9 @@ row_3 = out, F, jogSpeedFast, 320, , 0
 row_4 = out, J, jogSpeedSlow, 10, , 0
 row_5 = out, Q, jogPositiveFast, -1, MFQ, 1
 row_6 = out, P, jogPositiveSlow, -1, MJP, 1
-row_7 = out, N, jogNegativeSlow, -1, MJN, 1
-row_8 = out, O, jogNegativeFast, -1, MFO, 1
-row_9 = out, X, stopMotor, -1, X, 1
+row_7 = out, X, stopMotor, -1, X, 1
+row_8 = out, N, jogNegativeSlow, -1, MJN, 1
+row_9 = out, O, jogNegativeFast, -1, MFO, 1
 row_10 = out, H, setHome, -1, MH, 1
 row_11 = out, S, maxSpeed, 2500, , 0
 row_12 = out, A, maxAccel, 5000, , 0
@@ -37,9 +37,9 @@ row_14 = out, R, runToTarget, -1, MSATR, 1
 row_15 = out, D, runToZero, -1, MSAD, 1
 row_16 = out, G, runToEndStop, -1, G, 1
 row_17 = out, C, runMotorTest, -1, C, 1
-row_18 = in, a, posMotor0, 0, , 0
-row_19 = in, b, posMotor1, 0, , 0
-row_20 = in, c, posMotor2, 0, , 0
+row_18 = in, x, posMotor0, 0, , 0
+row_19 = in, y, posMotor1, 0, , 0
+row_20 = in, z, posMotor2, 0, , 0
 [BlinkWinControl]
 row_0 = inf, B, baudRate, 115200, , 0
 row_1 = inf, Z, commID, 1002, , 0
